# MCPServer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  ingest.sh  manage.sh  pyproject.toml  quick_test.py  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  setup_issue.md
.github/workflows/: publish.yml
src/fremem/: chunking.py  db.py  ingest.py  manage.py  server.py  server_http.py
src/mcp_memory/: chunking.py  db.py  ingest.py  manage.py  server.py  server_http.py
tests/: conftest.py  test_chunking.py  test_db.py  test_governance.py  test_http.py  test_ingest.py  test_pdf.py  test_retrieval.py  test_server.py
