[project]
name = "mcp-memory"
version = "0.2.0"
description = "A persistent vector memory MCP server with multi-project isolation"
authors = [
    { name = "Jaiprakash Sharma", email = "user@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
    "lancedb>=0.17.0",
    "sentence-transformers>=3.3.0",
    "torch>=2.2.0",
    "pypdf>=3.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
    "sse-starlette>=2.1.0"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]

[project.scripts]
mcp-memory = "mcp_memory.server:main"
mcp-ingest = "mcp_memory.ingest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
