[project]
name = "fremem"
version = "0.2.1"
description = "A persistent vector memory MCP server with multi-project isolation"
readme = "README.md"
authors = [
    { name = "Jaiprakash Sharma", email = "user@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
keywords = ["mcp", "memory", "vector-database", "lancedb", "windsurf", "cursor", "rag"]
urls = { Homepage = "https://github.com/iamjpsharma/fremem", Repository = "https://github.com/iamjpsharma/fremem.git", Issues = "https://github.com/iamjpsharma/fremem/issues" }
dependencies = [
    "mcp>=1.0.0",
    "lancedb>=0.17.0",
    "sentence-transformers>=3.3.0",
    "torch>=2.2.0",
    "pypdf>=3.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
    "sse-starlette>=2.1.0"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "build",
    "twine"
]

[project.scripts]
fremem = "fremem.server:cli_main"
fremem-ingest = "fremem.ingest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
